# eones

./: .buildinfo  .coveragerc  .dockerignore  .git-commit-template.txt  .gitattributes  .gitignore  .pylintrc  AGENTS.md  CHANGELOG.es.md  CHANGELOG.html  CHANGELOG.md  CONTRIBUTING.es.md  CONTRIBUTING.md  LICENSE.html  MANIFEST.in  README.es.md  README.html  README.md  ROADMAP.md  SECURITY.md  changelog.html  eones.core.html  eones.html  eones.integrations.html  eones.locales.html  generate_changelog_preview.py  genindex.html  index.html  license.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  readme.html  search.html  searchindex.js  tox.ini
.doctrees/: CHANGELOG.doctree  LICENSE.doctree  README.doctree  changelog.doctree  environment.pickle  eones.core.doctree  eones.doctree  eones.integrations.doctree  eones.locales.doctree  index.doctree  license.doctree  readme.doctree
.doctrees/benchmarks/: README.doctree  readme.doctree
.doctrees/examples/: advanced_patterns.doctree  advanced_usage.doctree  basic_usage.doctree  complete_deltas.doctree  error_handling.doctree  formatting_serialization.doctree  quick_start.doctree  real_world_scenarios.doctree  regional_configuration.doctree  time_deltas.doctree  use_cases.doctree  week_configuration.doctree
.doctrees/integrations/: fastapi.doctree  sqlalchemy.doctree
.github/: PULL_REQUEST_TEMPLATE.md  cliff.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/security-scan/: action.yml
.github/actions/setup-python/: action.yml
.github/workflows/: ci.yml  docs.yml  maintenance.yml  publish.yml  release.yml  tox.yml
_sources/: CHANGELOG.md.txt  changelog.md.txt  eones.core.rst.txt  eones.integrations.rst.txt  eones.rst.txt  index.rst.txt  license.md.txt  readme.md.txt
_sources/examples/: advanced_usage.md.txt  basic_usage.md.txt  error_handling.md.txt  regional_configuration.md.txt  use_cases.md.txt
_sources/integrations/: fastapi.md.txt  sqlalchemy.md.txt
benchmarks/: README.html  README.md  comparison.py  comparison_requirements.txt  memory.py  microbenchmarks.py  profiling.py  readme.html
docs/: LOCALE_GUIDE.es.md  LOCALE_GUIDE.md
docs/source/: CHANGELOG.md  LOCALE_GUIDE.md  README.md  changelog.md  conf.py  eones.calendars.america.rst  eones.calendars.asia.rst  eones.calendars.europe.rst  eones.calendars.oceania.rst  eones.calendars.rst  eones.core.rst  eones.locales.rst  eones.rst  index.rst  readme.md
docs/source/_static/: .gitkeep
docs/source/benchmarks/: README.md
docs/source/examples/: advanced_patterns.md  basic_usage.py  business_calendar.md  error_handling.md  formatting_serialization.md  real_world_scenarios.md  regional_configuration.md  time_deltas.md
docs/source/guides/: advanced_comparisons.md  advanced_manipulation.md  advanced_ranges.md  quick_start_basics.md  quick_start_formatting.md  quick_start_math.md
docs/source/integrations/: celery.md  django.md  drf.md  fastapi.md  flask.md  marshmallow.md  mongodb.md  sqlalchemy.md
docs/source/intro/: basic_example.md  comparison.md  features.md  installation.md  overview.md  requirements.md
docs/source/locale/es/LC_MESSAGES/: CHANGELOG.po  LICENSE.mo  README.mo  README.po  changelog.mo  changelog.po  eones.core.po  eones.integrations.po  eones.locales.po  eones.mo  eones.po  index.po  license.po  readme.mo  readme.po
docs/source/locale/es/LC_MESSAGES/benchmarks/: readme.po
docs/source/locale/es/LC_MESSAGES/examples/: advanced_patterns.po  advanced_usage.po  basic_usage.po  complete_deltas.po  error_handling.po  formatting_serialization.po  regional_configuration.mo  regional_configuration.po  time_deltas.mo  use_cases.po  week_configuration.po
docs/source/locale/es/LC_MESSAGES/integrations/: fastapi.po  sqlalchemy.po
examples/: advanced_patterns.html  advanced_patterns.md  advanced_usage.html  advanced_usage.py  basic_usage.html  basic_usage.py  complete_deltas.html  complete_deltas.md  error_handling.html  formatting_serialization.html  formatting_serialization.md  labor_calendar.py  locale_formatting.md  quick_start.html  quick_start.md  real_world_scenarios.html  regional_configuration.html  time_deltas.html  time_deltas.md  use_cases.html  week_configuration.html  week_configuration.md
examples/es/: casos_de_uso.md  configuracion_regional.md  deltas_completo.md  deltas_de_tiempo.md  escenarios_reales.md  formateo_serializacion.md  guia_rapida.md  manejo_errores.md  patrones_avanzados.md  uso_avanzado.md  uso_basico.md
integrations/: fastapi.html  sqlalchemy.html
src/eones/: __init__.py  constants.py  errors.py  formats.py  humanize.py  interface.py  locale_format.py
src/eones/calendars/: __init__.py
src/eones/calendars/america/: __init__.py  argentina.py  us.py
src/eones/calendars/asia/: __init__.py  japan.py
src/eones/calendars/europe/: __init__.py  france.py  germany.py  spain.py
src/eones/calendars/oceania/: __init__.py  australia.py
src/eones/core/: __init__.py  business.py  date.py  delta.py  delta_calendar.py  delta_duration.py  parser.py  range.py  special_dates.py
src/eones/integrations/: __init__.py  django.py  serializers.py  sqlalchemy.py
src/eones/locales/: __init__.py  de.py  en.py  es.py  fr.py  ja.py
tests/: test_date.py  test_delta.py  test_delta_calendar.py  test_delta_duration.py  test_edge_cases.py  test_errors.py  test_formats.py  test_integrations.py  test_interface.py  test_parser.py  test_range.py  test_version.py
tests/integration/: test_date_range.py  test_diff_add.py  test_django_field.py  test_end_to_end_flows.py  test_parse_format.py  test_serializers.py  test_sqlalchemy_type.py  test_timestamp_flow.py
tests/unit/: test_business.py  test_calendars.py  test_constants.py  test_date.py  test_delta.py  test_delta_calendar.py  test_delta_duration.py  test_edge_cases.py  test_errors.py  test_formats.py  test_humanize.py  test_interface.py  test_locale_format.py  test_parser.py  test_range.py  test_version.py
