[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Eones"
dynamic = ["version"]
description = "Elegant time manipulation and reasoning library"
readme = {file = "README.md", content-type = "text/markdown"}
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "Roldriel", email = "roldriel@gmail.com" }
]
keywords = [
    "datetime",
    "time",
    "calendar",
    "library",
    "dates",
    "timezones"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
    "Natural Language :: Spanish",
    "Natural Language :: English",
    "Natural Language :: French",
    "Natural Language :: German",
    "Natural Language :: Japanese"
]
dependencies = []

[project.optional-dependencies]
docs = ["sphinx", "myst-parser", "furo"]
test = ["pytest>=9.0.3", "coverage"]
tz = ["tzdata"]

[project.urls]
repository = "https://github.com/roldriel/eones"
documentation = "https://roldriel.github.io/eones/"
"Bug Tracker" = "https://github.com/roldriel/eones/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "eones.__version__"}

[tool.setuptools.package-data]
eones = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
target-version = ["py39"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
python_files = "test_*.py"

[tool.pylint.format]
max-line-length = 87

[tool.pylint.reports]
output-format = "colorized"
score = true

[tool.pylint.design]
min-public-methods = 0

[tool.pylint."messages_control"]
disable = [
    "cyclic-import",
    "duplicate-code",
]

[tool.coverage.run]
source = ["eones"]
omit = [
    "*/__init__.py",
    "tests/*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError"
]
show_missing = true
fail_under = 97

[tool.mypy]
python_version = "3.9"
strict = true
ignore_missing_imports = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
# Use explicit path instead of exclude to avoid analyzing site-packages
files = ["src"]

[[tool.mypy.overrides]]
module = "eones.integrations.*"
# Integrations wrap optional third-party libraries (Django, SQLAlchemy)
# whose stubs may not be installed, so their types resolve to Any.
disallow_subclassing_any = false

[tool.coverage.html]
directory = "htmlcov"
